PR standards/60335 -- expose O_EXEC for Posix I7 & beyond

XXX pullup -9 -10 -11